Changes in about section

--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              I'm Udath, a passionate software developer with a strong background in data structures 
+              and algorithms (DSA) and proficiency in C, C++, and Java. I recently completed an 
+              internship at Amazon, gaining valuable industry experience. I enjoy competitive 
+              programming and am dedicated to solving complex problems. I'm eager to continue 
+              expanding my knowledge and contributing to the ever-evolving world of technology.
             </p>
           </div>
         </div>
